# myencfs

./: .gitignore  INSTALL.md  Makefile.am  README.md  TODO.md  configure.ac  myencfs.spec.in  package.info.in
.github/workflows/: build.yaml  codespell.yaml
debian/: myencfs.install  not-installed  watch
gentoo/: Makefile.am
gentoo/app-crypt/myencfs/: myencfs-9999.ebuild
include/: Makefile.am
include/myencfs/: Makefile.am  myencfs-bio-crypto.h  myencfs-bio-file.h  myencfs-bio.h  myencfs-context.h  myencfs-error.h  myencfs-static.h  myencfs-system-driver-core.h  myencfs-system-driver-ids-core.h  myencfs-system-driver-myencfs.h  myencfs-system.h  myencfs-variant.h  myencfs.h
packaging/: Makefile.am
packaging/buildroot/: Makefile.am
packaging/buildroot/myencfs/: Config.in  external.desc  external.mk
packaging/buildroot/myencfs/package/: Config.in
packaging/buildroot/myencfs/package/myencfs/: Config.in  myencfs.mk
packaging/debian/: .gitignore  Makefile.am  changelog  control  copyright  gbp.conf  libmyencfs-dev.dirs  libmyencfs-dev.install  libmyencfs1.symbols  myencfs-fuse.install  rules
packaging/debian/upstream/: metadata
packaging/docker/: Makefile.am
packaging/docker/myencfs-fedora/: Dockerfile  myencfs-tool-wrapper.sh  myencfs.repo
packaging/gentoo/: Makefile.am
packaging/gentoo/myencfs/app-crypt/myencfs/: metadata.xml  myencfs-9999.ebuild
packaging/gentoo/myencfs/metadata/: layout.conf
packaging/rpm/: Makefile.am  myencfs.spec.in
packaging/windows-nsis/: Makefile.am  build  myencfs.nsi
packaging/yocto/: Makefile.am
packaging/yocto/meta-myencfs/conf/: layer.conf
packaging/yocto/meta-myencfs/myencfs/: myencfs_git.bb
src/: Makefile.am
src/libmyencfs/: Makefile.am  libmyencfs.pc.in  myencfs-bio-crypto-decrypt.c  myencfs-bio-crypto-decrypt.exports  myencfs-bio-crypto-encrypt.c  myencfs-bio-crypto-encrypt.exports  myencfs-bio-crypto-internal.h  myencfs-bio-crypto-private.h  myencfs-bio-file.c  myencfs-bio-file.exports  myencfs-bio-random.c  myencfs-bio-random.h  myencfs-bio-util.c  myencfs-bio-util.h  myencfs-bio.c  myencfs-bio.exports  myencfs-context.c  myencfs-context.exports  myencfs-crypto-bcrypt.c  myencfs-crypto-mbed.c  myencfs-crypto-mbedtls.c  myencfs-crypto-openssl.c  myencfs-crypto-wolfssl.c  myencfs-crypto.h  myencfs-decrypt.c  myencfs-decrypt.exports  myencfs-encrypt.c  myencfs-encrypt.exports  myencfs-error-internal.h  myencfs-error.c  myencfs-error.exports  myencfs-internal.h  myencfs-md.c  myencfs-md.h  myencfs-private.h  myencfs-static.c  myencfs-static.exports  myencfs-system-driver-core.h  myencfs-system.c  myencfs-system.exports  (+5 more)
src/myencfs-fuse/: Makefile.am  main.c
src/myencfs-tool/: Makefile.am  cmd-decrypt.c  cmd-decrypt.h  cmd-encrypt.c  cmd-encrypt.h  compat-getopt.c  compat-getopt.h  getoptutil.c  getoptutil.h  main.c  util.c  util.h  versioninfo.rc.in
test/: Makefile.am
test/libmyencfs/: Makefile.am  test-error.c  test-realtime.c  test-sanity.c
test/myencfs-fuse/: Makefile.am  fuse.valgrind.supp  test-myencfs-fuse-sanity.sh  test-myencfs-fuse-valgrind.sh  test-sanity.sh  test-valgrind.sh
test/myencfs-tool/: Makefile.am  test-myencfs-tool-sanity.cmd  test-myencfs-tool-sanity.sh  test-sanity.sh
yocto/: myencfs_git.bb
yocto/meta-myencfs/conf/: layer.conf
yocto/meta-myencfs/myencfs/: myencfs_git.bb
