MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in \
	$(NULL)

myencfsinclude_HEADERS = \
	myencfs-bio-crypto.h \
	myencfs-bio-file.h \
	myencfs-bio.h \
	myencfs-context.h \
	myencfs-error.h \
	myencfs-static.h \
	myencfs-system-driver-core.h \
	myencfs-system-driver-myencfs.h \
	myencfs-system.h \
	myencfs-variant.h \
	myencfs.h \
	$(NULL)
